<resources>
    <string name="app_name">MardEx PRO</string>
    <string name="home">Uy</string>
    <string name="tariff">Tariflar</string>
    <string name="location">Xarita</string>
    <string name="menu_confirm">Tasdiqlash</string>
    <string name="title_job_chooser">Kasblaringizni tanlang</string>
    <string name="settings">Sozlamalar</string>
    <string name="entrance_to_program">Dasturga kirish</string>
    <string name="enter_phone_number">Telefon raqamini kiriting</string>
    <string name="password">Parolni kiriting</string>
    <string name="all">Barchasi</string>
    <string name="_10">10</string>
    <string name="Mardex">MardEx</string>
    <string name="enter">Kirish</string>
    <string name="forgot_password">Parolni unutdingizmi?</string>
    <string name="title_profile">Profil</string>
    <string name="name">FISH</string>
    <string name="name_full">Familiya Ism Sharif</string>
    <string name="temp_rating">100 / 100</string>
    <string name="temp_balance">0 UZS</string>
    <string name="pay">Hisobni toʻldirish</string>
    <string name="temp_count_jobs">0</string>
    <string name="temp_jobs">Umumiy\n ishlar</string>
    <string name="temp_success">Qabul\n qilinganlar</string>
    <string name="temp_cancel">Bekor\n qilinganlar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etia, vel fringilla est ullamcorper eget nulla facilisi etia, vel fringilla est ullamcorper eget null</string>
    <string name="phone">+99890 123 45 67</string>
    <string name="about_me">Men haqimda</string>
    <string name="temp_about">Ish beruvchilarda yaxshi taassurot yaratish uchun, o`zingiz haqingizda ma`lumotlarni kirgizing!</string>
    <string name="about">Oʻzingiz haqingizda.</string>
    <string name="photos">Ishlarimdan na`muna</string>
    <string name="jobs">Ishlar roʻyxati</string>
    <string name="Welcome">Xo’sh kelibsiz</string>
    <string name="register">Roʻyxatdan oʻtish</string>
    <string name="profile">Profil</string>
    <string name="enter_your_phone_number">Iltimos,telefon raqamingizni toʻgʻri kiriting</string>
    <string name="enter_your_password_number">Parolingizni kiriting</string>
    <string name="please_complete_fields">Iltimos quyidagilarni to’ldiring</string>
    <string name="enter_full_name">F.I.SH</string>
    <string name="confirm_password">Parolni takrorlang</string>
    <string name="next">Davom etish</string>
    <string name="if_you_are_before_sign_up">Agarda siz oldin roʻyxatdan oʻtgan boʻlsangiz</string>
    <string name="code_verify">Kod tekshiruvi</string>
    <string name="desc_code_verify">Sizning telefon raqamingizga 5 xonali sms kod yuborildi, ushbu kodni kiritishingiz kerak boʻladi. Vaqt chegaralangan</string>
    <string name="code">Kod</string>
    <string name="confirm_sms_code">Tasdiqlash</string>
    <string name="send_code_again">Kodni takror yuborish</string>
    <string name="again_to_register">Maʻlumotlarni takror kiritish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_edit_lang">Tilni o`zgartirish</string>
    <string name="set_night">Tungi rejim</string>
    <string name="set_help">Yordam</string>
    <string name="about_us">Biz haqimizda</string>
    <string name="privacy_policy">Maxfiylik siyosati</string>
    <string name="current_language">O`zbek</string>
    <string name="Settings">Sozlamalar</string>
    <string name="problems">Muammolar</string>
    <string name="desc_problems">Dasturdagi talablar va muammolar</string>
    <string name="complete_photo_passport">Pasport ma`lumotlaringizni rasmga oling</string>
    <string name="complete_photo_passport_in_proccess">Pasport ma`lumotlaringiz ko`rib chiqilmoqda</string>
    <string name="demand_main_title">1. Dastur toʻliq ishlashi uchun talablar</string>
    <string name="interference_problems_main_title">2. Dasturga xalaqit beruvchi omillar</string>
    <string name="your_images_saved">Pasport rasmlari saqlandi</string>
    <string name="mavjud_tariflar">Mavjud tariflar</string>
    <string name="tariff_start">Silver</string>
    <string name="cost_start">5000 UZS</string>
    <string name="tariff_gold">Gold</string>
    <string name="tariff_silver">Platinum</string>
    <string name="cost_silver">10000 UZS</string>
    <string name="cost_gold">15000 UZS</string>
    <string name="choose">Tanlash</string>
    <string name="batafsil">Batafsil</string>
    <string name="_30">30</string>
    <string name="text_kun">kun</string>
    <string name="tarif_haqida_ma_lumot">Tarif haqida ma`lumot</string>
    <string name="tariff_main_tab">Asosiy</string>
    <string name="tariff_stat_tab">Hisobotlar</string>
    <string name="stat_string">Oxirgi operatsiyalar</string>
    <string name="kk_oo_yyyy">kk.oo.yyyy</string>
    <string name="_0_00_so_m">+0.00 UZS</string>
    <string name="_00_00">00:00</string>
    <string name="tulov">Hisob toʻldirish</string>
    <string name="success">Muvaffaqqiyatli</string>
    <string name="davom_etish">Davom etish</string>
    <string name="qaytadan">Qayta urinish</string>
    <string name="tugatish">"Tugatish"</string>
    <string name="finish">Tugatish</string>
    <string name="endi_passportingizdan_ro_yxatda_turish_bo_limini_suratga_tushiring">2. Endi pasportingizdan roʻyxatda turish boʻlimini suratga tushiring</string>
    <string name="suratga_olishda_yuzingiz_va_passportingizni_ramkaga_mos_xolatda_tushiring">3. Suratga olishda yuzingiz va pasportingizni ramkaga mos xolatda tushiring</string>
    <string name="o_zbek">Oʻzbek tili</string>
    <string name="rus">Русский язык</string>
    <string name="krill">Ўзбек тили</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="confirm">Tasdiqlash</string>
    <string name="job">Ish</string>
    <string name="close">Yopish</string>
    <string name="phone_number">Telefon raqami</string>
    <string name="send">Yuborish</string>
    <string name="reset_password">Parolni tiklash</string>
    <string name="enter_new_password">Yangi parolni kiriting</string>
    <string name="edit">Oʻzgartirish</string>
    <string name="menu_edit">Oʻzgartirish</string>
    <string name="choose_lang">Iltimos, tilni tanlang!</string>
    <string name="you_can_change">Keyinchalik sozlamalar bo`limidan o`zgartirishingiz mumkin!</string>
    <string name="set_free">Boʻshliqga chiqish </string>
    <string name="passport_photo_definition1">Pasport bosh sahifasining fotosurati</string>
    <string name="passport_photo_definition2">Pasport yashash manzili sahifasi fotosurati</string>
    <string name="passport_photo_definition3">Pasportni o`zingiz ushlab turgan holatdagi fotosurat</string>
    <string name="set_not_free">Band holatiga oʻtish</string>
    <string name="yes_problems">Muammolar</string>
    <string name="camera_info">Pasportingizni asosiy sahifasini shu ramka asosiga qoʻyib rasmga oling</string>
    <string name="qaytadan_button">Qaytadan suratga olish</string>
    <string name="yaxshi_keyingisi">Yaxshi keyingisi</string>
    <string name="shaxsiy_hisobni">Tarif uchun toʻlov amalga oshiring</string>
    <string name="saqlash">Saqlash</string>
    <string name="try_after_a_while">Server bilan boʻgʻliq muammo. Birozdan soʻng urinib koʻring.</string>
    <string name="failure">Xatolik yuz berdi</string>
    <string name="turn_on_internet">Internetingizni yoqing 😡</string>
    <string name="enter_your_surname">Familiya va Ismingizni kiriting</string>
    <string name="entering_password">Parolni kiriting</string>
    <string name="repeat_your_passord">Parolni qaytadan kiriting</string>
    <string name="input_phone_number_right">Telefon raqamini toʻgʻri kiriting</string>
    <string name="incompatible_password">Parollar mos emas</string>
    <string name="rad_etish">Rad etish</string>
    <string name="qabul_qilish">Qabul qilish</string>
    <string name="dont_enough_money">Hisobda mablagʻ yetarli emas!</string>
    <string name="changing_language">Tilni oʻzgartirish</string>
    <string name="menu_logout">Chiqish</string>
    <string name="successfully_message_dialog">Muvaffaqqiyatli</string>
    <string name="back">Back</string>
    <string name="image">Image</string>
    <string name="network_not_available">Network is not available</string>
    <string name="call_to_worker">Qoʻngʻiroq</string>
    <string name="takephoto">takePhoto</string>
    <string name="additional">additional</string>
    <string name="picturearea">pictureArea</string>
    <string name="picturebigarea">pictureBigArea</string>
    <string name="do_you_want_to_delete_the_avatar">Profil suratingizni oʻchirmoqchimisiz? </string>
    <string name="yes_dialog">Ha</string>
    <string name="no_dialog">Yoʻq</string>
    <string name="make_free">Hozirgi ishni tugatmoqchimisiz ?</string>
    <string name="_25_second">25 sekund</string>
    <string name="full_name">Full Name</string>
    <string name="_14_km">14 km</string>
    <string name="chaqirilgan_ish_nomi">Chaqirilgan ish nomi</string>
    <string name="send_image_success">Rasmingiz muvaffaqiyatli yuborildi!</string>
    <string name="gps_status_enabled">Gps yoqilgan</string>
    <string name="gps_status_disabled">Gps yoqilmagan</string>
    <string name="search">Qidirish</string>
    <string name="no_jobs">Hech narsa topilmadi!</string>
    <string name="my_jobs">Mening sohalarim</string>
    <string name="adder_to_clipboard">Toʻlov uchun id xotiraga saqlandi!</string>
    <string name="change_tariff">Tarif almashtirish</string>
    <string name="change_tariff_desc">Tarifingizni <b><u>%1$s</u></b> tarifiga oʻzgartirmoqchimisiz? Hisobingizdan <u>%2$s</u> yechib olinadi!</string>
    <string name="choose_tariff">Tarifga oʻtish</string>
    <string name="text_progres">Iltimos biroz kuting!</string>
    <string name="code_incorrect">Kiritilgan kod xato</string>
    <string name="sms_is_not_working">SMS hizmati ishlamayapti</string>
    <string name="main_screen">Bosh sahifa</string>
    <string name="title_home">Bosh sahifa</string>
    <string name="title_orders">Buyurtmalar</string>
    <string name="title_tariff">Tariflar</string>
    <string name="back_image_button">back_btn_image_desc</string>
    <string name="logo_image_desc">logo_image_desc</string>
    <string name="enter_name_surname">Familiyangizni, ismingizni va sharifingizni kiriting</string>
    <string name="f__i_sh">F.I.SH</string>
    <string name="enter_phone_number_">Telefon raqamingizni kiriting</string>
    <string name="enter_password">Parolni kiriting</string>
    <string name="password_">Parol</string>
    <string name="confirm_password_">Parolni takrorlang</string>
    <string name="confirm_hint">Parol</string>
    <string name="formatted_mardex_v" translatable="false">MardEx V%1$s</string>
    <string name="login_">Kirish</string>
    <string name="login">MardEx PRO ga kirish</string>
    <string name="forgot_password_">Parolni unutdingizmi?</string>
    <string name="restore_password_">Tiklash</string>
    <string name="enter_password_ba">Parolni kiriting</string>
    <string name="account_not_available">Akkauntigiz yo`qmi?</string>
    <string name="go_to_sign_up">Ro`yxatdan o`tish ></string>
    <string name="save">Saqlash</string>
    <string name="restore_password">Parolni tiklash</string>
    <string name="desc_send_sms_code">Sizning raqamingizga SMS orqali kod yuboriladi</string>
    <string name="news">Yangiliklar</string>
    <string name="soft_lang">Dasturning tili</string>
    <string name="phone_number_">Telefon raqamingiz</string>
    <string name="personal_data">Shaxsiy ma`lumotlar</string>
    <string name="about_you">O`zingiz haqingizda ma`lumot</string>
    <string name="example_desc">Masalan: 5 yillik qurilish tajribasi.</string>
</resources>