<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical"
    tools:context=".ui.screen.entry_activity.restore_password_fragment.RestorePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/PopToBackImageViewStyle"
            android:contentDescription="@string/back_image_button"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_logo_worker"
            style="@style/LogoMardexImageStyle"
            android:contentDescription="@string/logo_image_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--ttt-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_title_restore"
            style="@style/TextTitleSignUpStyle"
            android:text="@string/restore_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_worker" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_phone_title"
            style="@style/TextMiddleTitlePhoneSignUpStyle"
            android:text="@string/enter_phone_number_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_restore" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_et_phone"
            style="@style/InputEditTextCardViewStyle"
            android:backgroundTint="@color/jobs_item_color"
            app:cardElevation="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_et_phone"
                style="@style/InputEditTextLayoutStyle"
                android:hint="@string/phone_number_"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@null">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:id="@+id/et_phone"
                    style="@style/InputMaskedEditTextPhoneStyle"
                    android:backgroundTint="@color/jobs_item_color" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_send_sms_desc"
            style="@style/TextMiddleTitlePhoneSignUpStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/desc_send_sms_code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_et_phone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_password_title"
            style="@style/TextMiddleTitlePhoneSignUpStyle"
            android:text="@string/enter_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_send_sms_desc" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_et_password"
            style="@style/InputEditTextCardViewStyle"
            android:backgroundTint="@color/jobs_item_color"
            app:cardElevation="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_et_password"
                style="@style/InputEditTextLayoutStyle"
                android:hint="@string/password_"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/eye_grey"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/InputMaskedEditTextFullNameStyle"
                    android:backgroundTint="@color/jobs_item_color"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_confirm_password_title"
            style="@style/TextMiddleTitlePhoneSignUpStyle"
            android:text="@string/confirm_password_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_et_password" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_et_confirm_password"
            style="@style/InputEditTextCardViewStyle"
            android:backgroundTint="@color/jobs_item_color"
            app:cardElevation="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_et_confirm_password"
                style="@style/InputEditTextLayoutStyle"
                android:hint="@string/confirm_hint"
                android:imeOptions="actionNext"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/eye_grey"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    style="@style/InputMaskedEditTextFullNameStyle"
                    android:backgroundTint="@color/jobs_item_color"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/ButtonNextStyle"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableEnd="@drawable/ic_arrow_white"
            android:text="@string/next"
            app:backgroundTint="@color/new_green"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_et_confirm_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_version"
            style="@style/AppVersionTextStyleIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formatted_mardex_v"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>